package protocol;

import "UserData.proto";
option java_package = "protocol.Msg";

message LoginReq {
	required string userName = 1;
	required string userPassword = 2;
}

message LoginRsp {
	enum ResultCode {
		SUCCESS = 0;
		FAIL = 1;
		USER_NO_EXIST=3;
	}

	required ResultCode resultCode = 1;
	optional UserItem userItem = 2;
}
