package protocol;

option java_package = "protocol.Msg";
import "UserData.proto";
message RegisterReq {
	required string userName = 1;
	required string userPassword = 2;
}

message RegisterRsp {
	enum ResultCode{
		SUCCESS = 0;  //表示注册成功
	    USER_EXIST = 1;   //表示用户名已存在
	}

	required ResultCode resultCode=1;
	optional UserItem userItem = 2;
}